# quant-crew

./: README.md  TASKFILE_COMMANDS.md  Taskfile.yml
backend/: .env.example  .gitignore  README.md  fetch_ticker_data.py  init_db_and_fetch.py  main.py  pyproject.toml  runyahoofinance.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_ticker_history_table.py
backend/app/: config.py
backend/app/agents/: __init__.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: items.py  tickers.py
backend/app/config/: README.md  agent_config.yaml  stock_watchlist.yaml
backend/app/core/: database.py  security.py
backend/app/models/: __init__.py  item.py  ticker_history.py
backend/app/schemas/: __init__.py  item.py  ticker_history.py
backend/app/services/: item.py  ticker_service.py
backend/app/tools/: __init__.py
backend/app/workflows/: __init__.py
backend/docs/: AGENTS_OVERVIEW.md  CONFIG_CONSOLIDATION.md  IMPLEMENTATION_PLAN.md  INDEX.md  MERGE_SUMMARY.md  QUICKSTART.md  TICKER_DATA_SETUP.md
backend/examples/: config_usage.py
backend/scripts/: README.md
backend/tests/: test_main.py
frontend/: tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CandlestickChart.tsx  ConfiguredTickers.tsx  DashboardHeader.tsx  StatsHeader.tsx  TickerCard.tsx
frontend/src/pages/: Index.tsx  TickerDetail.tsx
